influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__delete_statement-2.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"DELETE WHERE 'foo bar' =~ /foo/\")"
---
- pre_visit_statement
- pre_visit_delete_statement
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- post_visit_delete_statement
- post_visit_statement

