influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__explain_statement-7.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"EXPLAIN SHOW DATABASES\")"
---
- pre_visit_statement
- pre_visit_explain_statement
- pre_visit_statement
- pre_visit_show_databases_statement
- post_visit_show_databases_statement
- post_visit_statement
- post_visit_explain_statement
- post_visit_statement

